# pdf-bookmarkit-cli

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
bookmarkit/: __init__.py  main.py  models.py  pdf_processor.py  vlm_client.py
tests/: test_merge.py
